# rk3588-camera-robot

./: .gitignore  AGENTS.md  README.md
artifacts/20260709/M06-camera-smoke/: commands.txt  environment.txt  result.md
artifacts/20260709/M07-camera-stability/: result.md
artifacts/20260709/M08-cross-machine-image/: commands.txt  result.md
artifacts/20260715/M09-target-observation-interface/: commands.txt  environment.txt  result.md
artifacts/20260715/M10-offline-aruco/: commands.txt  environment.txt  result.md
artifacts/20260715/M11-ros-aruco/: commands.txt  environment.txt  result.md
artifacts/20260716/M12-pid-core/: commands.txt  environment.txt  result.md
artifacts/20260716/M13-target-loss-state/: commands.txt  environment.txt  result.md
artifacts/20260716/M14-simulated-gimbal/: checksums.txt  commands.txt  environment.txt  result.md
artifacts/20260717/M15-soc-pwm-inventory/: commands.txt  environment.txt  result.md
artifacts/20260720/M15-safe-pwm-core/: commands.txt  environment.txt  result.md
artifacts/20260720/M15-servo-smoke/: commands.txt  environment.txt  result.md
artifacts/20260720/M16-three-point-calibration/: commands.txt  environment.txt  result.md
docs/: 01_quick_start.md  02_design.md  03_progress_status.md  04_issue_log.md  05_test_plan.md  06_wsl_ros2_install.md  07_rk_ros2_install.md  08_execution_playbook.md  rk3588_clash_proxy_ros.md
ros2_ws/src/lubanvision_camera_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/lubanvision_camera_cpp/src/: image_rate_probe.cpp  v4l2_camera_publisher.cpp
ros2_ws/src/lubanvision_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/lubanvision_vision/lubanvision_vision/: __init__.py  aruco_detector.py  aruco_integration_probe.py  aruco_node.py  camera_publisher.py  image_rate_probe.py
ros2_ws/src/lubanvision_vision/test/: test_aruco_detector.py  test_aruco_node.py  test_copyright.py  test_flake8.py  test_pep257.py
scripts/: build.sh  m17_live_acceptance.sh  test.sh
tools/: network_check.py
硬件_鲁班猫5/: README.md  checksums.txt
硬件_鲁班猫5/EBF410149V1R0_20240221/: LubanCat5_EBF410149V1R0_PCB_20240221_BOT.dxf  LubanCat5_EBF410149V1R0_PCB_20240221_TOP.dxf
(+110 files in other folders)
