<?xml version="1.0"?>
<package format="3">
  <name>lubanvision_camera_cpp</name>
  <version>0.1.0</version>
  <description>Low-overhead V4L2 camera publisher for LubanVision.</description>
  <maintainer email="lc285800@users.noreply.github.com">lc285800</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
