<?xml version="1.0"?>
<package format="3">
  <name>lubanvision_vision</name>
  <version>0.1.0</version>
  <description>Camera input and target detection nodes for LubanVision.</description>
  <maintainer email="lc285800@users.noreply.github.com">lc285800</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
